--- a/index.html
+++ b/index.html
@@ -12,3 +12,60 @@
         <nav>
             <ul>
                 <li> <a href="#"><span>Web</span>Studio</a></li>
+                <li><a href="#">Студия</a></li>
+                <li>
+                    <a href="#">Пртфолио</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+        </ul>
+    </header>
+    <main>
+        <!-- HERO -->
+        <section>
+            <h1>Эффективные решения для вашего бизнеса</h1>
+            <a href="#">Заказать услугу</a>
+        </section>
+        <!-- features -->
+        <section>
+            <ul>
+                <li>
+                    <h2>Внимание к деталям</h2>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h2>Пунктуальность</h2>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h2>Планирование</h2>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h2>Современные технологии</h2>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <!-- What are we doing -->
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+                <li><img src="" alt=""></li>
+            </ul>
+        </section>
+        <!-- TEAM -->
+        <section></section>
+
+    </main>
+    <!-- FOOTER -->
+    <footer></footer>
+</body>
+<img src="" alt="">
+
+</html>
