--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
-                <li><img src="" alt=""></li>
+                <li><img src="./img/1.jpg" alt="процес розработки веб продукту" width="370" height="294"></li>
+                <li><img src="./img/2.jpg" alt="адаптация продукта для мобильных платформ" width="370" height="294">
+                </li>
+                <li><img src="./img/3.jpg" alt="подбор цвета для приложения" width="370" height="294"></li>
             </ul>
         </section>
         <!-- TEAM -->
