--- a/index.html
+++ b/index.html
@@ -54,14 +54,24 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./img/1.jpg" alt="процес розработки веб продукту" width="370" height="294"></li>
-                <li><img src="./img/2.jpg" alt="адаптация продукта для мобильных платформ" width="370" height="294">
+                <li><img src="./img/work/1.jpg" alt="процес розработки веб продукту" width="370" height="294"></li>
+                <li><img src="./img/work/2.jpg" alt="адаптация продукта для мобильных платформ" width="370"
+                        height="294">
                 </li>
-                <li><img src="./img/3.jpg" alt="подбор цвета для приложения" width="370" height="294"></li>
+                <li><img src="./img/work/3.jpg" alt="подбор цвета для приложения" width="370" height="294"></li>
             </ul>
         </section>
         <!-- TEAM -->
-        <section></section>
+        <section>
+            <h2>Наша команда</h2>
+            <li><img src="" alt="">
+                <h3></h3>
+                <p></p>
+            </li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </section>
 
     </main>
     <!-- FOOTER -->
