the final version

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -64,19 +64,33 @@
         <!-- TEAM -->
         <section>
             <h2>Наша команда</h2>
-            <li><img src="" alt="">
-                <h3></h3>
-                <p></p>
-            </li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <ul>
+                <li><img src="./img/team/1.jpg" alt="фото Игоря Демьяненко" width="270" height="260">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li><img src="./img/team/2.jpg" alt="фото Ольги Репиной" width="270" height="260">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li><img src="./img/team/3.jpg" alt="фото Николая Тарасова" width="270" height="260">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li><img src="./img/team/4.jpg" alt="фото Михаила Ермакова" width="270" height="260">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designer</p>
+                </li>
+            </ul>
         </section>
-
     </main>
     <!-- FOOTER -->
-    <footer></footer>
+    <footer>
+        <h2><a href="#"></a><span>Web</span>Studio</h2>
+        <address>г. Киев, пр-т Леси Украинки, 26 <br>info@example.com<br>+38 099 111 11 11
+        </address>
+    </footer>
 </body>
-<img src="" alt="">
+
 
 </html>
