--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <body>
     <header>
         <nav>
+            <a href="#"><span>Web</span>Studio</a>
             <ul>
-                <li> <a href="#"><span>Web</span>Studio</a></li>
                 <li><a href="#">Студия</a></li>
-                <li>
-                    <a href="#">Пртфолио</a></li>
+                <li><a href="#">Пртфолио</a></li>
                 <li><a href="#">Контакты</a></li>
             </ul>
         </nav>
@@ -28,24 +27,26 @@
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <a href="#">Заказать услугу</a>
+            <!-- <button>Заказать услугу</button> -->
         </section>
         <!-- features -->
         <section>
+            <h2>Скрытый текст</h2>
             <ul>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h2>Пунктуальность</h2>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h2>Планирование</h2>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h2>Современные технологии</h2>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -86,11 +87,9 @@
     </main>
     <!-- FOOTER -->
     <footer>
-        <h2><a href="#"></a><span>Web</span>Studio</h2>
+        <a href="#"><span>Web</span>Studio</a>
         <address>г. Киев, пр-т Леси Украинки, 26 <br>info@example.com<br>+38 099 111 11 11
         </address>
     </footer>
 </body>
-
-
 </html>
