--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
         <!-- features -->
         <section>
-            <h2>Скрытый текст</h2>
+            <h2 hidden>Скрытый текст</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -88,7 +88,12 @@
     <!-- FOOTER -->
     <footer>
         <a href="#"><span>Web</span>Studio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26 <br>info@example.com<br>+38 099 111 11 11
+        <address>
+           <ul>
+            <li> <a href="https://goo.gl/maps/a4u55syuBoc5VXPi8" target="_blank" rel="noopener noreferer">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+           </ul> 
         </address>
     </footer>
 </body>
